# pingwatch

./: .dockerignore  .gitignore  DEPLOY-PREVIEW.md  INSTALL.md  LICENSE  Makefile  README.md  fly.toml  install.sh  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: ci.yml
deploy/: 10-pingwatch.conf  99-pingwatch-usb.rules  99-pingwatch-wlan.rules  install-pingwatch.sh  no-idle.conf  pingwatch-host-helper.service  pingwatch-host-helper.sh  pingwatch-kiosk-restart.service  pingwatch-kiosk-restart.timer  pingwatch-kiosk.service  pingwatch-source-watcher.service  pingwatch-source-watcher.sh  pingwatch-update  pingwatch-usb-mount  pingwatch-usb-umount  pingwatch-watchdog.service  pingwatch-watchdog.sh  pingwatch-watchdog.timer  pingwatch-wlan-prefer  pingwatch.service  wait-for-pingwatch
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
src/pingwatch/: bus.py  config.py  connectivity.py  gateway_sync.py  main.py  models.py  netif.py  util.py
tests/: conftest.py
tests/integration/: test_api_smoke.py  test_dashboard_down_status.py  test_db_snapshot.py  test_export_roundtrip.py  test_main_taskgroup.py  test_system_update.py  test_wifi_open_portal.py  test_wifi_overview.py
tests/unit/: test_aggregator.py  test_connectivity.py  test_correlator.py  test_gateway_sync.py  test_heartbeat.py  test_monitor_interface.py  test_monitor_source_switch.py  test_netif.py  test_outage_detector.py  test_probes_base.py  test_purge_all_metrics.py  test_q_wifi_link_rate.py  test_q_wifi_source_switches.py  test_queries.py  test_retention.py  test_route_diff.py  (+9 more)
(+86 files in other folders)
